1941 [XviD] replaced -lumimasking with -masking (requires xvid 1.3). Feature request #3139141
     [XviD] disabled direct mkv ouput
1940 [Log] changed version number syntax for MeGUI x64
1939 [Settings] added buttons to clear the default output directory and the path to neroaacenc. Feature request #3177293
1938 [One-Click] fixed language pre-selection if the default languages are not different. Bug #3178016
1937 [XviD] enhanced overflow handling in the settings dialogue
1936 audio encoding job can be added without existing input file
1935 AssumeFPS() added to DirectShow(), DSS2() and FFVideoSource() scripts
1934 [HD Streams Extractor] the default tracks will be pre-selected based upon the selected languages in the settings
     [Settings] added option to disable the pre-selecting of tracks in the HD Streams Extractor
     [Settings] removed unnecessary OggEnc2 checkbox
     [Settings] some cosmetics
1933 [One-Click] enhanced automatic de-interlacing logging
1932 [FFMSIndexer] fixed ignoring audio downmix mode
1931 [One-Click] improved default language pre-selection
1930 [x264] changed default value of --qpmax to 69 (requires x264 rev 1881+)
1929 [AutoEncode] zone handling added so that Intro and Credit selection in the video preview window will be respected
1928 [FFMSIndexer] fixed auto-load of audio tracks to the main input tab for some files. Bug #3165894
1927 [HD Streams Extractor] fixed processing of joined input files. Bug #3164153
1926 [FFMSIndexer] improved audio track number detection. Bug #3165894
1925 [Settings] added option to ensure correct playback speed while playing the video preview (defaults to disabled) 
1924 [VideoPlayer] fixed invisible video pixels at the right (7) and bottom (1). Bug #3164635
                   added 1:1 video preview. Feature request #3164305
                   some adjustments
1923 [AVS Script Creator] new video player will be started with previewing the middle of the video